fix: css on mobile

--- a/client/src/pages/home/assets/css/projects.css
+++ b/client/src/pages/home/assets/css/projects.css
@@ -7,6 +7,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
+    overflow: scroll;
 }
 
 
@@ -17,6 +18,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    overflow: none;
 }
 
 .projects {
@@ -43,4 +45,21 @@
 .projects .project-card  .card-header{
     background: transparent;
     color: black;
+}
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    .projects {
+        flex-direction: column;
+        overflow: scroll;
+    }
+
+    .projects-header {
+        position: relative;
+        overflow: none;
+        transform: none;
+        left: 0;
+        top: 10%;
+    }
+    
 }
